# journalism

./: DEPLOY.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/eval/: golden.jsonl  run_eval.py
backend/scripts/: build_essay_exemplars.py  build_exemplars.py  build_journalism_exemplars.py  classify_critiques.py  classify_essay_critiques.py  classify_journalism.py  classify_journalism_craft.py  classify_reviews.py  classify_targeted.py  ingest_essays.py  ingest_journalism.py  ingest_journalism_craft.py  ingest_openreview.py  ingest_reviews.py  ingest_reviews_multi.py  strip_journalism_shorthand.py
backend/src/red_room/: api.py  cli.py  orchestrator.py  schemas.py
backend/src/red_room/agents/: __init__.py  analytical_editor.py  argumentative_editor.py  base.py  citation_editor.py  city_editor.py  clarity.py  counterargument.py  cs_ml_specialist.py  data_expert.py  evidence_quotation.py  explanatory_editor.py  features_editor.py  figure_table_editor.py  format_editor.py  human_rights.py  investigations_editor.py  legal_skeptic.py  limitations_editor.py  logic_auditor.py  methodology_editor.py  narrative_editor.py  opinion_editor.py  partisan.py  profile_editor.py  prose_style.py  question_master.py  related_work_editor.py  research_editor.py  reviews_editor.py  rhetorical_editor.py  structure_editor.py  theorem_editor.py  thesis_editor.py
backend/src/red_room/exemplars/: analytical_editor.jsonl  analytical_editor.yaml  argumentative_editor.jsonl  argumentative_editor.yaml  (+45 more)
backend/tests/: test_legal_skeptic.py
(+67 files in other folders)
