[project]
name = "red-room"
version = "0.1.0"
description = "Synthetic Red Room — AI agents that critique journalism pre-publication"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
red-room = "red_room.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Include the prompt and exemplar files in the installed package. Without
# this, pip install . only copies .py files, and the agent crashes at
# runtime when it tries to read prompts/legal_skeptic.md.
[tool.setuptools.package-data]
"red_room" = [
    "prompts/*.md",
    "exemplars/*.jsonl",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
